# cnine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  abstract.html  bak.pyproject.toml  cell_maps.html  common.txt  config.txt  ctensor.html  environment-cpu.yml  environment-gpu.yml  environment.yml  genindex.html  header.txt  index.html  intro.html  pyproject.toml  rtensor.html  search.html  searchindex.js  setup.py  tensor_arrays.html  tensors.html
.cibuildwheel/: config.toml
.github/workflows/: build_wheels.yml  pytest-cpu.yml  pytest-gpu.yml  pytest.yml
_sources/: cell_maps.rst.txt  index.rst.txt  intro.rst.txt  tensor_arrays.rst.txt  tensors.rst.txt
algorithms/: SortRowsUnique.hpp
algorithms/tests/: test_SortRowsUnique.cpp
combinatorial/: Combinations.hpp  CombinationsB.hpp  CombinationsBank.hpp  DeltaFactor.hpp  FindPlantedSubgraphs.hpp  FindPlantedSubgraphs2.hpp  PrefixTree.hpp  cpermutation.hpp  int_tree.hpp  labeled_forest.hpp  sparse_graph.hpp
combinatorial/tests/: Makefile  testCombinations.cpp  testDeltaFactor.cpp  test_sparse_graph.cpp
containers/: AsyncGPUbuffer.hpp  GPUbuffer.hpp  array_pool.hpp  auto_array.hpp  double_indexed_map.hpp  double_map.hpp  hlists.hpp  int_pool.hpp  map_of_lists.hpp  map_of_maps.hpp  minivec.hpp  object_pack.hpp  object_pack_s.hpp  pindexed_object_bank.hpp  plist_indexed_object_bank.hpp  ptr_arg_indexed_cache.hpp  ptr_arg_indexed_object_bank.hpp  ptr_indexed_object_bank.hpp  ptr_pair_indexed_object_bank.hpp  ptr_triple_indexed_cache.hpp  shared_object_bank.hpp  shared_object_pack.hpp
containers/tests/: test_array_pool.cpp
cuda/: BasicCtensorProducts.cu  BlockCsparseMatrix.cu  CMakeLists.txt  CUDAhelpers.hpp  Ctensor1view_add.cu  EigenRoutines.cpp  FindPlantedSubgraphs.cu  LtensorBLAS.cu  Makefile  RtensorConvolve.cu  RtensorConvolve2d.cu  RtensorConvolve2dSparse.cu  RtensorConvolve3d.cu  RtensorConvolve3dSparse.cu  RtensorConvolveSparse.cu  RtensorEinsumProducts.cu  RtensorPackUtils.cu  RtensorReduce.cu  RtensorUtils.cu  TensorView_accumulators.cu  TensorView_add.cu  TensorView_assign.cu  TensorView_gather.cu  TensorView_inc.cu  gatherRows.cu
doctrees/: abstract.doctree  cell_maps.doctree  ctensor.doctree  environment.pickle  index.doctree  intro.doctree  rtensor.doctree  tensor_arrays.doctree  tensors.doctree
doctrees/backup/: tensors.doctree
einsum/: ContractionNode.hpp  ContractionTree.hpp  ContractionTrees.hpp  EinsumForm.hpp  EinsumFormN.hpp  EinsumHelpers.hpp  EinsumProgram.hpp  EinsumPrograms.hpp  LatexDoc.hpp  contraction_node.hpp
einsum/tests/: Makefile  test_contractions2.cpp
etree2/: ctree.hpp  loop_tree.hpp  loop_tree_index_set.hpp  loop_tree_node.hpp  loop_tree_op.hpp  loop_trees.hpp
etree2/tests/: test_loop_tree.cpp  test_loop_trees.cpp
hpc/: Convolve1D.hpp  Convolve2D.hpp  FixedkGatherMap.hpp  GatherMapB.hpp  GatherMapPack.hpp  GatherMapProgram.hpp  GatherMapProgramHelpers.hpp  GatherMapProgramPack.hpp  GatherRows.hpp  GatherSlices.hpp  TensorProgram.hpp  WeightedGatherMapB.hpp  gather_rows.hpp
hpc/tests/: testConvolve1D.cpp  testConvolve2D.cpp  testGatherMapB.cpp  testGatherMapProgram.cpp  testGatherSlices.cpp
html/: cell_maps.html  index.html  intro.html  objects.inv  searchindex.js  tensor_arrays.html  tensors.html
include/: CellMask1r.hpp  CellMask2r.hpp  Cmaps2.hpp  CnineLog.hpp  CnineObject.hpp  CnineSession.hpp  Cnine_base.cpp  Cnine_base.hpp  Cnine_base_helpers.hpp  ExprTemplates.hpp  FFactorial.hpp  FakeGrad.hpp  GatherMap.hpp  Gdims.hpp  GdimsPack.hpp  GenericCop.hpp  GenericIterator.hpp  Gindex.hpp  GindexFuser.hpp  GindexMap.hpp  GindexPass.hpp  GindexSet.hpp  GindexSymm.hpp  Gstrides.hpp  GstridesB.hpp  Gtensor.hpp  MemArr.hpp  MemBlob.hpp  MemoryManager.hpp  MultiLoop.hpp  Rmask1.hpp  SimpleMemoryManager.hpp  ThreadGroup.hpp  ThreadPool.hpp  WorkStreamLoop.hpp  array_pool.hpp  device_helpers.hpp  diff_class.hpp  frational.hpp  ftimer.hpp  (+4 more)
include/cmaps/: AccumulateCmap.hpp  CellwiseBinaryCmap.hpp
include/tests/: Makefile  testMemoryManager.cpp  testMultiLoop.cpp  testPrimes.cpp  test_ffactorial.cpp  test_frational.cpp
latex/: LatexDoc.hpp  LatexTable.hpp  TikzPlot.hpp  TikzStream.hpp  TikzTree.hpp  TikzTreeNode.hpp
latex/tests/: table.tex  testLatexTable.cpp
legacy/scalar/: CscalarA.hpp
legacy/tensor/: CtensorObj.hpp
math/: Determinant.hpp  Factorial.hpp
matrices/: BlockCsparseMatrix.hpp  CSRmatrix.hpp  SparseRmatrix.hpp
modules/cnine/: containers  tensors
objects/backendA/: CtensorA.hpp  CtensorA_accessor.hpp  CtensorAflock.hpp  CtensorArrayA.hpp  IntTensor.hpp  LabeledTensor.hpp  RtensorA.hpp  RtensorA_accessor.hpp  RtensorArrayA.hpp
objects/backendB/: CtensorArrayB.hpp  CtensorB.hpp  CtensorB_accessor.hpp  (+1 more)
python/: CMakeLists.txt  cnine_py.cpp  ctensor_py.cpp  ctensorarr_py.cpp  ctensorb_py.cpp  rtensor_py.cpp  rtensorarr_py.cpp  setup.py  setup.x.py
python/bindings/: Rmask1_py.cpp  cmaps_py.cpp  cnine_py.cpp  ctensor_py.cpp  ctensorarr_py.cpp  ctensorb_py.cpp  ctensorpack_py.cpp  rtensor_py.cpp  rtensorarr_py.cpp
python/docs/source/: abstract.rst  index.rst  intro.rst  rtensor.rst  tensor_arrays.rst  tensors.rst
python/src/cnine/: __init__.py  ctensorv.py  rtensorv.py  torch_cnine.py
python/tests/: doc_examples.py
tensor_views/: Ctensor2_view.hpp  Ctensor6_view.hpp  Itensor2_view.hpp  Rtensor1_view.hpp  Rtensor2_view.hpp  Rtensor3_view.hpp  Rtensor7_view.hpp
tensors/: BGtensor.hpp  BGtensorPack.hpp  BGtensor_functions.hpp  BGtensor_products.hpp  BGtensor_reconcilers.hpp  BatchedTensor.hpp  Dtensor.hpp  Ltensor.hpp  LtensorBpack.hpp  LtensorEinsum.hpp  Tensor.hpp  TensorFunctions.hpp  TensorView.hpp  TensorView_ATen.inc  TensorView_IO.inc  TensorView_access.inc  TensorView_constructors.hpp  TensorView_cumulative_ops.inc  TensorView_functions.hpp  TensorView_gen_ops.inc  TensorView_lambdas.inc  TensorView_reshapes.inc  TensorView_scalar_ops.inc  TensorView_subtensors.inc
utility/: ATview.hpp  ComplexHelper.hpp  Gather.hpp  GatherMapB.hpp  flog.hpp  logged_timer.hpp  observable.hpp  once.hpp  watched.hpp
wrappers/: cachedf.hpp
(+229 files in other folders)
