[build-system]
requires = ["scikit-build-core", "torch", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "cnine"
version = "0.2.0"
authors = [
  { name = "Risi Kondor", email = "risi@uchicago.edu" },
]
dependencies = ["torch"]
description = "Lightweight Tensor Library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
urls = { homepage = "https://github.com/risi-kondor/cnine" }

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.define = {BUILD_PYTHON="ON"}
wheel.packages=["python/src/cnine"]
