[build-system]
requires = ["setuptools>=42", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "cnine"
version = "0.2.0"
authors = [
  { name = "Risi Kondor", email = "risi@uchicago.edu" },
]
dependencies = ["torch"]
description = "Lightweight Tensor Library"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
urls = { homepage = "https://github.com/risi-kondor/cnine" }

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.define = {BUILD_PYTHON="ON"}
wheel.packages=["python/src/cnine"]
